
* TShark can now export TLS session keys with the --export-tls-session-keys option.

* Wireshark participated in the Google Season of Docs 2020 and the User’s Guide has been extensively updated.

* Format of export to CSV in RTP Stream Analysis dialog was slightly changed. First line of export contains names of columns as in other CSV exports.

* Wireshark now supports the Turkish language.

// === Removed Features and Support

// === Removed Dissectors

=== New File Format Decoding Support

[commaize]
--
Vector Informatik Binary Log File (BLF)
--

=== New Protocol Support

// Add one protocol per line between the -- delimiters in the format
// "Full protocol name (Abbreviation)"
[commaize]
--
Bluetooth Link Manager Protocol (BT LMP)
E2 Application Protocol (E2AP)
Event Tracing for Windows (ETW)
High-Performance Connectivity Tracer (HiPerConTracer)
ISO 10681
Kerberos SPAKE
Linux psample protocol
Local Interconnect Network (LIN)
Microsoft Task Scheduler Service
O-RAN E2AP
O-RAN fronthaul UC-plane (O-RAN)
Opus Interactive Audio Codec (OPUS)
PDU Transport Protocol
R09.x (R09)
RDP Dynamic Channel Protocol (DRDYNVC)
Real-Time Publish-Subscribe Virtual Transport (RTPS-VT)
Real-Time Publish-Subscribe Wire Protocol (processed) (RTPS-PROC)
Shared Memory Communications (SMC)
Signal PDU
SparkplugB
State Synchronization Protocol (SSyncP)
Tagged Image File Format (TIFF)
TP-Link Smart Home Protocol
UAVCAN/CAN
UAVCAN DSDL
Van Jacobson PPP compression (VJC)
World of Warcraft World (WOWW)
--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

// There is no new or updated capture file support in this release.
// Add one file type per line between the -- delimiters.
[commaize]
--
Vector Informatik Binary Log File (BLF)
--

// === New and Updated Capture Interfaces support

//_Non-empty section placeholder._

// === Major API Changes

== Getting Wireshark
